--- a/mods-available/mpm_worker.conf
+++ b/mods-available/mpm_worker.conf
@@ -10,13 +10,13 @@
 # MaxConnectionsPerChild: maximum number of requests a server process serves
 
 <IfModule mpm_worker_module>
-	StartServers			 2
-	MinSpareThreads		 25
-	MaxSpareThreads		 75
-	ThreadLimit			 64
-	ThreadsPerChild		 25
-	MaxRequestWorkers	  150
-	MaxConnectionsPerChild   0
+    StartServers	     2
+    MinSpareThreads	    25
+    MaxSpareThreads	    75
+    ThreadLimit		    64
+    ThreadsPerChild	    25
+    MaxRequestWorkers	   150
+    MaxConnectionsPerChild   0
 </IfModule>
 
-# vim: syntax=apache ts=4 sw=4 sts=4 sr noet
+# vim: syntax=apache 
